tests/fixtures/negative/empty-blocks/EmptyKotlinFile.kt
package fixtures.negative.emptyblocks

class App {
    fun run() {
        println("Hello, World!")
    }
}
